--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             }
         }
 
-            function myFunction(x) {
+          /*  function myFunction(x) {
                 if (x.matches) { // If media query matches
                     document.body.style.backgroundColor = "yellow";
                 } else {
@@ -212,7 +212,7 @@
         var x = window.matchMedia("(max-width: 700px)")
         myFunction(x) // Call listener function at run time
         x.addListener(myFunction) // Attach listener function on state changes
-
+            */
 
 
         var slideIndex = 0;
