--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav-link">
                 <li >
-                    <a id="texts" href="./cakepage.html"><h4 >HOME</h4></a>
+                    <a id="texts" href="cakepage.html"><h4 >HOME</h4></a>
                 </li>
                 <li >
                     <a id="texts1" href=""><h4 >ABOUT US</h4></a>
