--- a/cart.html
+++ b/cart.html
@@ -58,7 +58,7 @@
                 
             </div>
             <div class="order">
-                <h3 id="cakeType2"></h3>
+                <h3 id="cakeType2">Mango Bravo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Rem mollitia dolor iste voluptas quasi distinctio, fugiat 
                 </p>
