--- a/cakepage.html
+++ b/cakepage.html
@@ -63,123 +63,129 @@
     <div class="cakeGallery">
         <div class="cake">
             <a id="cakeNamed" href="" style="text-decoration: none; color: white;">
-                <h3 id="cakeType">Mango Bravo</h3>
+                <h3 id="cakeType1">Mango Bravo</h3>
             </a>
-            <a id="gotoCart" href="./cart.html">
-                <img src="./cake/Round Cake/Mango Bravo.jpg" alt="">
+            <a class="imageCake" id="gotoCart">
+                <img class="bannerImg1" src="./cake/Round Cake/Mango Bravo.jpg" alt="">
             </a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
             <a id="cakeNamed" href="" style="text-decoration: none; color: white;">
-            <h3 id="cakeType" >Chifon Cake</h3></a>
-            <img src="./cake/Round Cake/Chifon.jpg" alt="">
+            <h3 id="cakeType2">Chifon Cake</h3></a>
+            <a class="imageCake">
+                <img class="bannerImg2" src="./cake/Round Cake/Chifon.jpg" alt="">
+            </a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3 id="cakeType" >Round Chocolate Cake</h3>
-            <img src="./cake/Round Cake/Chocolate.jpg" alt="">
+            <h3 id="cakeType3">Round Chocolate Cake</h3>
+            <a class="imageCake">
+                <img class="bannerImg3" src="./cake/Round Cake/Chocolate.jpg" alt="">
+            </a> 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Brazo de Mercedez Roll Cake</h3>
-            <img src="./cake/Roll Cakes/Brazo de Mercedez.jpg" alt="">
+            <h3 id="cakeType4" >Brazo de Mercedez Roll Cake</h3>
+            <a class="imageCake4">
+                <img class="bannerImg4" src="./cake/Roll Cakes/Brazo de Mercedez.jpg" alt="">
+            </a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Ube Roll</h3>
-            <img src="./cake/Roll Cakes/Ube.jpg" alt="">
+            <h3 id="cakeType5" >Ube Roll</h3>
+            <img class="bannerImg5" src="./cake/Roll Cakes/Ube.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Mocha Roll</h3>
-            <img src="./cake/Roll Cakes/Mocha.jpg" alt="">
+            <h3 id="cakeType6" >Mocha Roll</h3>
+            <img class="bannerImg6" src="./cake/Roll Cakes/Mocha.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Chocolate Dreamcake</h3>
-            <img src="./cake/Dream Cake/Chocolate.jpg" alt="">
+            <h3 id="cakeType7" >Chocolate Dreamcake</h3>
+            <img class="bannerImg7" src="./cake/Dream Cake/Chocolate.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Mango Dreamcake</h3>
-            <img src="./cake/Dream Cake/Mango.jpg" alt="">
+            <h3 id="cakeType8" >Mango Dreamcake</h3>
+            <img class="bannerImg8" src="./cake/Dream Cake/Mango.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Mocha Dreamcake</h3>
-            <img src="./cake/Dream Cake/Mocha.JPG" alt="">
+            <h3 id="cakeType9">Mocha Dreamcake</h3>
+            <img class="bannerImg9" src="./cake/Dream Cake/Mocha.JPG" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>New York Cheesecake</h3>
-            <img src="./cake/Cheese Cake/New York CheeseCake.jpg" alt="">
+            <h3 id="cakeType10">New York Cheesecake</h3>
+            <img class="bannerImg10" src="./cake/Cheese Cake/New York CheeseCake.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Oreo Cheesecake</h3>
-            <img src="./cake/Cheese Cake/Oreo CheeseCake.jpg" alt="">
+            <h3 id="cakeType11">Oreo Cheesecake</h3>
+            <img class="bannerImg11" src="./cake/Cheese Cake/Oreo CheeseCake.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Strawberry Cheesecake</h3>
-            <img src="./cake/Cheese Cake/Coming Soon 1.jpg" alt="">
+            <h3 id="cakeType12" >Strawberry Cheesecake</h3>
+            <img class="bannerImg12" src="./cake/Cheese Cake/Coming Soon 1.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Vanilla Cupcake</h3>
-            <img src="./cake/Cupcake/Vanilla.jpg" alt="">
+            <h3 id="cakeType13">Vanilla Cupcake</h3>
+            <img class="bannerImg13" src="./cake/Cupcake/Vanilla.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Coffee Cupcake</h3>
-            <img src="./cake/Cupcake/Coffee.jpg" alt="">
+            <h3 id="cakeType14" >Coffee Cupcake</h3>
+            <img class="bannerImg14" src="./cake/Cupcake/Coffee.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Sprinkle Cupcake</h3>
-            <img src="./cake/Cupcake/Coming Soon 1.jpg" alt="">
+            <h3 id="cakeType15">Sprinkle Cupcake</h3>
+            <img class="bannerImg15" src="./cake/Cupcake/Coming Soon 1.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
 
         <div class="cake">
-            <h3>Alcapone</h3>
-            <img src="./cake/Sweet Bites/Doughnuts/Alcapone.jpg" alt="">
+            <h3 id="cakeType16">Alcapone</h3>
+            <img class="bannerImg16" src="./cake/Sweet Bites/Doughnuts/Alcapone.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Sugar Coated Doughnut</h3>
-            <img src="./cake/Sweet Bites/Doughnuts/Coming Soon 1.jpg" alt="">
+            <h3 id="cakeType17">Sugar Coated Doughnut</h3>
+            <img class="bannerImg17" src="./cake/Sweet Bites/Doughnuts/Coming Soon 1.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Sprinkled Doughnut</h3>
-            <img src="./cake/Sweet Bites/Doughnuts/Coming Soon 2.jpg" alt="">
+            <h3 id="cakeType18">Sprinkled Doughnut</h3>
+            <img class="bannerImg18" src="./cake/Sweet Bites/Doughnuts/Coming Soon 2.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Coconut Macaroons</h3>
-            <img src="./cake/Sweet Bites/Macaroons/Coconut.jpg" alt="">
+            <h3 id="cakeType19">Coconut Macaroons</h3>
+            <img class="bannerImg19" src="./cake/Sweet Bites/Macaroons/Coconut.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Chocolate Macaroons</h3>
-            <img src="./cake/Sweet Bites/Macaroons/Coming Soon 1.jpg" alt="">
+            <h3 id="cakeType20">Chocolate Macaroons</h3>
+            <img class="bannerImg20" src="./cake/Sweet Bites/Macaroons/Coming Soon 1.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Original Silvanas</h3>
-            <img src="./cake/Sweet Bites/Silvanas/Original.jpg" alt="">
+            <h3 id="cakeType21">Original Silvanas</h3>
+            <img class="bannerImg21" src="./cake/Sweet Bites/Silvanas/Original.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Chocalte Silvanas</h3>
-            <img src="./cake/Sweet Bites/Silvanas/Chocolate.jpg" alt="">
+            <h3 id="cakeType22">Chocalte Silvanas</h3>
+            <img class="bannerImg22" src="./cake/Sweet Bites/Silvanas/Chocolate.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="cake">
-            <h3>Coffee Silvanas</h3>
-            <img src="./cake/Sweet Bites/Silvanas/Coffee.jpg" alt="">
+            <h3 id="cakeType23">Coffee Silvanas</h3>
+            <img class="bannerImg23" src="./cake/Sweet Bites/Silvanas/Coffee.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
@@ -192,5 +198,7 @@
     </footer>
     <script src="./app.js"> 
     </script>
+
+
 </body>
 </html>
