--- a/cakepage.html
+++ b/cakepage.html
@@ -33,9 +33,9 @@
      <!-- #region1 -->
     <div class="cakes"> 
         <ul class="navlinks">
-            <li class="active">
+            <li class="active" id="hm">
                 <a href="#"><h3>HOME</h3></a>
-                <a href="#"><h3>ABOUT US</h3></a>
+                <a href="index.html#cont3"><h3>ABOUT US</h3></a>
             </li>
             <li class="typeofCakes" id="whatsNew">
                 <h3>What's New</h3>
@@ -249,11 +249,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </div> 
-     </div>
-
-    <!-- <div class="whatsNew2" id="watsNew2"> -->
-     
-    <!-- </div> -->
+     </div> 
     <div class="rollCakes" id="rollCake">
         <div class="cake">
             <h3 id="">Brazo de Mercedez</h3>
