--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
    
    
-    <div class="contactus">
+    <div class="contactus" id="contact">
         <div class="card">
             <i class="far fa-times fa-3x" id="closeBtn"></i>
             <h1> CONTACT US </h1>
