--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
    
    
-    <div class="contactus" id="contact">
+    <div class="contactus" id="cnt">
         <div class="card">
             <i class="far fa-times fa-3x" id="closeBtn"></i>
             <h1> CONTACT US </h1>
@@ -30,8 +30,10 @@
             <textarea rows="4" cols="100" name="comment"></textarea>
             <input type="button" value="Submit">
         </form>
+        <div class="scrollToTop" id="scrtop"></div>
     </div>
-        <nav id="navbar">
+   
+    <nav id="navbar">
            
             <div class="logo">
                 <img src="logo/logo.png" alt="">
