--- a/cakepage.html
+++ b/cakepage.html
@@ -273,21 +273,21 @@
         </div> 
         <div class="rollCakes" id="rollCake">
             <div class="cake">
-                <h3 id="">Brazo de Mercedez</h3>
+                <h3 id="ck">Brazo de Mercedez</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Roll Cakes/Brazo de Mercedez.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Mocha</h3>
+                <h3 id="ck">Mocha</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Roll Cakes/Mocha.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Ube</h3>
+                <h3 id="ck">Ube</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Roll Cakes/Ube.jpg" alt="">
                 </a>
@@ -296,42 +296,42 @@
         </div>
         <div class="dreamCake" id="dcCake">
             <div class="cake">
-                <h3 id="">Chocolate</h3>
+                <h3 id="ck">Chocolate</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Dream Cake/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Mango</h3>
+                <h3 id="ck">Mango</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Dream Cake/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Mocha</h3>
+                <h3 id="ck">Mocha</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Dream Cake/Mocha.JPG" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Ube</h3>
+                <h3 id="ck">Ube</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Dream Cake/Ube.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">New York Cheesecake</h3>
+                <h3 id="ck">New York Cheesecake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Cheese Cake/New York CheeseCake.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Oreo CheeseCake</h3>
+                <h3 id="ck">Oreo CheeseCake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Cheese Cake/Oreo CheeseCake.jpg" alt="">
                 </a>
@@ -340,42 +340,42 @@
         </div>
         <div class="cupCake" id="cupCake">
             <div class="cake">
-                <h3 id="">Chocolate</h3>
+                <h3 id="ck">Chocolate</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Cupcake/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Coffee</h3>
+                <h3 id="ck">Coffee</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Cupcake/Coffee.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Mango</h3>
+                <h3 id="ck">Mango</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Cupcake/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Mocha</h3>
+                <h3 id="ck">Mocha</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Cupcake/Mocha.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Ube</h3>
+                <h3 id="ck">Ube</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Cupcake/Ube.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Vanilla</h3>
+                <h3 id="ck">Vanilla</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Cupcake/Vanilla.jpg" alt="">
                 </a>
@@ -384,49 +384,49 @@
         </div>
         <div class="sweetBites" id="sweetBts">
             <div class="cake">
-                <h3 id="">Alcapone</h3>
+                <h3 id="ck">Alcapone</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Sweet Bites/Doughnuts/Alcapone.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Coconut Macaroons</h3>
+                <h3 id="ck">Coconut Macaroons</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Sweet Bites/Macaroons/Coconut.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Original Silvanas</h3>
+                <h3 id="ck">Original Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Sweet Bites/Silvanas/Original.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Chocolate Silvanas</h3>
+                <h3 id="ck">Chocolate Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Sweet Bites/Silvanas/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Coffee Silvanas</h3>
+                <h3 id="ck">Coffee Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Sweet Bites/Silvanas/Coffee.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Mango Silvanas</h3>
+                <h3 id="ck">Mango Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Sweet Bites/Silvanas/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="">Matcha Silvanas</h3>
+                <h3 id="ck">Matcha Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
                     <img class="" src="./cake/Sweet Bites/Silvanas/Matcha.jpg" alt="">
                 </a>
