--- a/cakepage.html
+++ b/cakepage.html
@@ -217,218 +217,218 @@
             <div class="cake">
                 <h3 id="ck">Mango Bravo</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="round" src="./cake/Round Cake/Mango Bravo.jpg" alt="">
+                    <img id="round" src="./cake/Round Cake/Mango Bravo.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck">Chocolate</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="round" src="./cake/Round Cake/Chocolate.jpg" alt="">
+                    <img id="round" src="./cake/Round Cake/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck">Chifon de Leche</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="round" src="./cake/Round Cake/Chifon.jpg" alt="">
+                    <img id="round" src="./cake/Round Cake/Chifon.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck">Mango</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="round" src="./cake/Round Cake/Mango.jpg" alt="">
+                    <img id="round" src="./cake/Round Cake/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck">Mocha</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="round" src="./cake/Round Cake/Mocha.jpg" alt="">
+                    <img id="round" src="./cake/Round Cake/Mocha.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck">Sans Rival</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="round" src="./cake/Round Cake/Sans rival.jpg" alt="">
+                    <img id="round" src="./cake/Round Cake/Sans rival.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck">Ube Macapunio</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="round" src="./cake/Round Cake/Ube Macapunio.jpg" alt="">
+                    <img id="round" src="./cake/Round Cake/Ube Macapunio.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck">Ube Yema</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="round" src="./cake/Round Cake/Ube Yema.jpg" alt="">
+                    <img id="round" src="./cake/Round Cake/Ube Yema.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </div> 
         <div class="rollCakes" id="rollCake">
             <div class="cake">
-                <h3 id="ck">Brazo de Mercedez</h3>
+                <h3 id="ck1">Brazo de Mercedez</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Roll Cakes/Brazo de Mercedez.jpg" alt="">
+                    <img id="roll" src="./cake/Roll Cakes/Brazo de Mercedez.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Mocha</h3>
+                <h3 id="ck1">Mocha</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Roll Cakes/Mocha.jpg" alt="">
+                    <img id="roll" src="./cake/Roll Cakes/Mocha.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Ube</h3>
+                <h3 id="ck1">Ube</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Roll Cakes/Ube.jpg" alt="">
+                    <img id="roll" src="./cake/Roll Cakes/Ube.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
         <div class="dreamCake" id="dcCake">
             <div class="cake">
-                <h3 id="ck">Chocolate</h3>
+                <h3 id="ck2">Chocolate</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Dream Cake/Chocolate.jpg" alt="">
+                    <img id="dr" src="./cake/Dream Cake/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Mango</h3>
+                <h3 id="ck2">Mango</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Dream Cake/Mango.jpg" alt="">
+                    <img id="dr" src="./cake/Dream Cake/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Mocha</h3>
+                <h3 id="ck2">Mocha</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Dream Cake/Mocha.JPG" alt="">
+                    <img id="dr" src="./cake/Dream Cake/Mocha.JPG" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Ube</h3>
+                <h3 id="ck2">Ube</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Dream Cake/Ube.jpg" alt="">
+                    <img id="dreams" src="./cake/Dream Cake/Ube.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">New York Cheesecake</h3>
+                <h3 id="ck2">New York Cheesecake</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Cheese Cake/New York CheeseCake.jpg" alt="">
+                    <img id="dr" src="./cake/Cheese Cake/New York CheeseCake.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Oreo CheeseCake</h3>
+                <h3 id="ck2">Oreo CheeseCake</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Cheese Cake/Oreo CheeseCake.jpg" alt="">
+                    <img id="dr" src="./cake/Cheese Cake/Oreo CheeseCake.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
         <div class="cupCake" id="cupCake">
             <div class="cake">
-                <h3 id="ck">Chocolate</h3>
+                <h3 id="ck3">Chocolate</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Cupcake/Chocolate.jpg" alt="">
+                    <img id="cup" src="./cake/Cupcake/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Coffee</h3>
+                <h3 id="ck3">Coffee</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Cupcake/Coffee.jpg" alt="">
+                    <img id="cup" src="./cake/Cupcake/Coffee.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Mango</h3>
+                <h3 id="ck3">Mango</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Cupcake/Mango.jpg" alt="">
+                    <img id="cup" src="./cake/Cupcake/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Mocha</h3>
+                <h3 id="ck3">Mocha</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Cupcake/Mocha.jpg" alt="">
+                    <img id="cup" src="./cake/Cupcake/Mocha.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Ube</h3>
+                <h3 id="ck3">Ube</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Cupcake/Ube.jpg" alt="">
+                    <img id="cup" src="./cake/Cupcake/Ube.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Vanilla</h3>
+                <h3 id="ck3">Vanilla</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Cupcake/Vanilla.jpg" alt="">
+                    <img id="cup" src="./cake/Cupcake/Vanilla.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
         <div class="sweetBites" id="sweetBts">
             <div class="cake">
-                <h3 id="ck">Alcapone</h3>
+                <h3 id="ck4">Alcapone</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Sweet Bites/Doughnuts/Alcapone.jpg" alt="">
+                    <img id="sweet" src="./cake/Sweet Bites/Doughnuts/Alcapone.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Coconut Macaroons</h3>
+                <h3 id="ck4">Coconut Macaroons</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Sweet Bites/Macaroons/Coconut.jpg" alt="">
+                    <img id="sweet" src="./cake/Sweet Bites/Macaroons/Coconut.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Original Silvanas</h3>
+                <h3 id="ck4">Original Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Sweet Bites/Silvanas/Original.jpg" alt="">
+                    <img id="sweet" src="./cake/Sweet Bites/Silvanas/Original.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Chocolate Silvanas</h3>
+                <h3 id="ck4">Chocolate Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Sweet Bites/Silvanas/Chocolate.jpg" alt="">
+                    <img id="sweet" src="./cake/Sweet Bites/Silvanas/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Coffee Silvanas</h3>
+                <h3 id="ck4">Coffee Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Sweet Bites/Silvanas/Coffee.jpg" alt="">
+                    <img id="sweet" src="./cake/Sweet Bites/Silvanas/Coffee.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Mango Silvanas</h3>
+                <h3 id="ck4">Mango Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Sweet Bites/Silvanas/Mango.jpg" alt="">
+                    <img id="sweet" src="./cake/Sweet Bites/Silvanas/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Matcha Silvanas</h3>
+                <h3 id="ck4">Matcha Silvanas</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img class="" src="./cake/Sweet Bites/Silvanas/Matcha.jpg" alt="">
+                    <img id="sweet" src="./cake/Sweet Bites/Silvanas/Matcha.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
