--- a/cakepage.html
+++ b/cakepage.html
@@ -319,7 +319,7 @@
             <div class="cake">
                 <h3 id="ck2">Ube</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img id="dreams" src="./cake/Dream Cake/Ube.jpg" alt="">
+                    <img id="dr" src="./cake/Dream Cake/Ube.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
