--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,7 @@
                 <div class="orderForm">
                     <input id="price" type="tel" disabled placeholder="0" value="0">
                     <i id="minus" class="fas fa-minus"></i><input type="text" id="num" disabled value="0"><i id="add" class="fas fa-plus"></i>
-                    <input type="button" value="Reserve Now">
+                    <input type="button" id="rsv" value="Reserve Now">
                 </div>
             </div>
         </div>
