--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
                 </p>
                 <div class="orderForm">
                     <input id="price" type="tel" disabled placeholder="0" value="0">
-                    <i id="minus" class="fas fa-minus"></i><input type="text" id="num" disabled value="0"><i id="add" class="fas fa-plus"></i>
+                    <button id="minus" class="fas fa-minus"></button><input type="text" id="num" disabled value="0"><button id="add" class="fas fa-plus"></button>
                     <input type="button" id="rsv" value="Reserve Now">
                 </div>
             </div>
