--- a/cakepage.html
+++ b/cakepage.html
@@ -57,7 +57,7 @@
         <ul class="navlinks">
             <li class="active" id="hm">
                 <a href="index.html"><h3>HOME</h3></a>
-                <a href="index.html#cont3"><h3>ABOUT US</h3></a>
+                <a href="index.html#about"><h3>ABOUT US</h3></a>
             </li>
             <li class="typeofCakes" id="whatsNew">
                 <h3>What's New</h3>
