--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a id="texts" href="cakepage.html"><h4>OUR CAKES</h4></a>
                 </li>
                 <li >
-                    <div id="texts1"><h4 >ABOUT US</h4></div>
+                    <div id="texts1"><h4>ABOUT US</h4></div>
                 </li>
             </ul>
             <div class="burger">
@@ -138,7 +138,7 @@
     <!-- CONTENT 3 -->
     <div class="container3" >
         <div class="bGround one" id="cont3"></div>
-        <div  class="cardContainer" >
+        <div  class="cardContainer" id="about">
             <h1 >About Chosen 1</h1>
             <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Consequuntur incidunt facere repellat accusantium animi sunt consequatur suscipit dolores tenetur repudiandae! 
