--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
            
             <div class="logo">
                 <img src="logo/logo.png" alt="">
-                <h1 id="text1">Chosen 1</h1>
+                <div class="name">
+                    <h1 id="text1">Chosen 1  </h1>
+                    <p class="small">CustomizedCakes</p>
+                </div>
             </div>
             <ul class="nav-link">
                 <li >
