--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,10 @@
                 <div class="orderForm">
                     <input id="price" type="tel" disabled placeholder="0" value="0">
                     <button id="minus" class="fas fa-minus"></button><input type="text" id="num" disabled value="0"><button id="add" class="fas fa-plus"></button>
+                    <input placeholder="Set the date when do you want to deliver" class="textbox-n" type="text" onfocus="(this.type='date')" id="date">
+                    
                     <input type="button" id="rsv" value="Reserve Now">
+                    
                 </div>
             </div>
         </div>
